--- a/backend/package.json
+++ b/backend/package.json
@@ -15,17 +15,21 @@
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "@types/express-session": "^1.18.0",
+    "@types/multer": "^1.4.11",
     "@types/node": "^20.11.29",
+    "prisma": "^5.12.1",
     "ts-node": "^10.9.2",
     "tsc-watch": "^6.0.4",
     "typescript": "^5.4.2"
   },
   "dependencies": {
-    "@prisma/client": "^5.11.0",
+    "@prisma/client": "^5.12.1",
     "cors": "^2.8.5",
+    "csv-parser": "^3.0.0",
+    "csvtojson": "^2.0.10",
     "dotenv": "^16.4.5",
     "express": "^4.18.3",
     "express-session": "^1.18.0",
-    "prisma": "^5.11.0"
+    "multer": "^1.4.5-lts.1"
   }
 }
